generated/storage/garage-webui.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-webui
  namespace: storage
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: garage-webui
  template:
    metadata:
      labels:
        name: garage-webui
    spec:
      containers:
      - env:
        - name: API_BASE_URL
          value: http://garage-metrics.storage.svc.cluster.local:3903
        - name: S3_ENDPOINT_URL
          value: http://garage.storage.svc.cluster.local:3900
        - name: API_ADMIN_KEY
          value: helloworld
        image: khairul169/garage-webui:latest
        imagePullPolicy: IfNotPresent
        name: garage-webui
        ports:
        - containerPort: 3909
          name: http
        volumeMounts:
        - mountPath: /etc/garage.toml
          name: garage-config
          readOnly: true
          subPath: garage.toml
      volumes:
      - configMap:
          name: garage-config
        name: garage-config
