generated/storage/garage.StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/managed-by: Helmraiser
    app.kubernetes.io/name: garage
    app.kubernetes.io/version: v1.2.0
    helm.sh/chart: garage-0.7.1
  name: garage
  namespace: storage
spec:
  podManagementPolicy: OrderedReady
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: garage
      app.kubernetes.io/name: garage
  serviceName: garage-headless
  template:
    metadata:
      annotations:
        checksum/config: b5979d24195660598ef2b41f4f53914280a37c316e693e97c4a381fa5d147761
      labels:
        app.kubernetes.io/instance: garage
        app.kubernetes.io/name: garage
    spec:
      containers:
      - image: dxflrs/amd64_garage:v1.2.0
        imagePullPolicy: IfNotPresent
        name: garage
        ports:
        - containerPort: 3900
          name: s3-api
        - containerPort: 3902
          name: web-api
        - containerPort: 3903
          name: admin
        resources: {}
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /mnt/meta
          name: meta
        - mountPath: /mnt/data
          name: data
        - mountPath: /etc/garage.toml
          name: etc
          subPath: garage.toml
      - image: khairul169/garage-webui:latest
        imagePullPolicy: IfNotPresent
        name: garage-webui
        ports:
        - containerPort: 3909
          name: http
        volumeMounts:
        - mountPath: /etc/garage.toml
          name: etc
          readOnly: true
          subPath: garage.toml
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: garage
      volumes:
      - configMap:
          name: garage-config
        name: configmap
      - emptyDir: {}
        name: etc
  volumeClaimTemplates:
  - metadata:
      name: meta
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 100Mi
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 100Mi
