generated/storage/garage-headless.Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/managed-by: Helmraiser
    app.kubernetes.io/name: garage
    app.kubernetes.io/version: v1.2.0
    helm.sh/chart: garage-0.7.1
  name: garage-headless
  namespace: storage
spec:
  clusterIP: None
  ports:
  - name: s3-api
    port: 3900
    protocol: TCP
    targetPort: 3900
  - name: s3-web
    port: 3902
    protocol: TCP
    targetPort: 3902
  selector:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
  type: ClusterIP
