generated/storage/garage.HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
  namespace: storage
spec:
  hostnames:
  - storage.o5s.lol
  parentRefs:
  - name: nginx-gateway
    namespace: network
  rules:
  - backendRefs:
    - name: garage
      port: 3909
    matches:
    - path:
        value: /
