generated/storage/minio-console.HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: storage
spec:
  hostnames:
  - minio.o5s.lol
  parentRefs:
  - name: nginx-gateway
    namespace: network
  rules:
  - backendRefs:
    - name: minio-console
      port: 9443
    matches:
    - path:
        value: /
